--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@prisma/client": "^4.16.1",
+    "@prisma/client": "^4.16.2",
     "cloudinary": "^1.37.3",
     "next": "13.4.7",
     "react": "18.2.0",
@@ -18,6 +18,7 @@
   "devDependencies": {
     "eslint": "8.43.0",
     "eslint-config-next": "13.4.7",
+    "prisma": "^4.16.2",
     "tailwindcss": "^3.3.2"
   }
 }
