--- a/.env
+++ b/.env
@@ -4,4 +4,19 @@
 # Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
-DATABASE_URL="postgresql://postgres:123456789@localhost:5432/lion?schema=public"
+# DATABASE_URL="postgresql://postgres:123456789@localhost:5432/lion?schema=public"
+
+DATABASE_URL= "postgres://lion:yhLWZvNyi4hMEfLa4tL1YUacOGRg1ECg@dpg-cikdkedgkuvinfin6nbg-a.oregon-postgres.render.com/lion_ttya"
+
+
+
+
+#  para conexion de vercel falta arreglar algo
+
+# POSTGRES_URL="postgres://default:KWRF23UmNDAe@ep-curly-feather-889757-pooler.us-east-1.postgres.vercel-storage.com:5432/verceldb"
+# POSTGRES_PRISMA_URL="postgres://default:KWRF23UmNDAe@ep-curly-feather-889757-pooler.us-east-1.postgres.vercel-storage.com:5432/verceldb?pgbouncer=true&connect_timeout=15"
+# POSTGRES_URL_NON_POOLING="postgres://default:KWRF23UmNDAe@ep-curly-feather-889757.us-east-1.postgres.vercel-storage.com:5432/verceldb"
+# POSTGRES_USER="default"
+# POSTGRES_HOST="ep-curly-feather-889757-pooler.us-east-1.postgres.vercel-storage.com"
+# POSTGRES_PASSWORD="KWRF23UmNDAe"
+# POSTGRES_DATABASE="verceldb"
