--- a/package.json
+++ b/package.json
@@ -10,10 +10,16 @@
   },
   "dependencies": {
     "@prisma/client": "^4.16.2",
+    "@reduxjs/toolkit": "^1.9.5",
+    "@vercel/postgres": "^0.4.0",
+    "axios": "^1.4.0",
     "cloudinary": "^1.37.3",
     "next": "13.4.7",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-icons": "^4.10.1",
+    "react-redux": "^8.1.1",
+    "swiper": "^10.0.3"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.14",
